
2018-04-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: FR #305 for now - skip Fujitsu @OPTIONS

2018-04-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: prevent output file name "-" for all levels but preprocess,
	  allow listing to be output to stdout with listing name "-"
	* cobc.c, flag.def: replaced -tsymbols by -f[no-]tsymbols,
	  added option to suppress specific listing parts with new options
	  -fno-theader, -fno-tmessages, -fno-tsource (see NEWS)
	* parser.y, reserved.c, typeck.c, field.c: FR 303 - added USAGE BIT
	  and PIC 1 as pending (at least parsing of sources containing these
	  should work)

2018-04-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (process_command_line): minimal size for -tlines=20
	  to prevent endless loops on typos like -tlines=2

2018-04-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): prevent SIGSEGV for
	  ANY LENGTH items in LINKAGE when program is first COBOL program
	* tree.c (cb_build_intrinsic): leave size of national literals to
	  runtime (as it is done for national items), note: we currently
	  still generate national literals as alphanumeric literals
	* parser.y, typeck.c (cb_build_const_length): allow non-numeric
	  literals to be used with LENGTH OF and prohibit use of numeric
	  literals as parameters for FUNCTION LENGTH/BYTE-LENGTH/LENGTH-AN
	* parser.y, field.c (cb_validate_78_item): fix issues with invalid
	  VALUE clauses

2018-04-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_field_size): report ANY LENGTH items as "unknown size",
	  fixing Bug #511

2018-04-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: cosmetic change - label exit_program/exit_function
	  depending on program type
	* tree.h: moved definition of COB_MAX_SUBSCRIPTS to libcob/common.h
	* tree.c (finalize_report): removed double check for field (which I've