@@ -208,6 +208,7 @@ word-continuation:			archaic
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
+symbolic-constant:			unconformable
 constant-78:				unconformable
 constant-01:				ok
 perform-varying-without-by:		ok
