@@ -208,6 +208,7 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
+symbolic-constant:			unconformable
 constant-78:				unconformable
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
