@@ -186,6 +186,7 @@ goto-statement-without-name:		obsolete
 label-records-clause:			obsolete
 memory-size-clause:			obsolete
 move-noninteger-to-alphanumeric:	error
+symbolic-constant:			unconformable
 move-figurative-constant-to-numeric:	error
 move-figurative-space-to-numeric:	error
 move-figurative-quote-to-numeric:	error
